2007-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #315101

	* drag and drop to other source for multiselect
	* gui/comp-util.h:
	* gui/comp-util.c: (cal_comp_selection_set_string_list),
	(cal_comp_selection_get_string_list): Two new helper functions
	to set and get list of strings into GtkSelectionData.
	* gui/e-tasks.c: (get_selected_components_cb),
	(do_for_selected_components), (obtain_list_of_components),
	(table_drag_data_get):
	* gui/e-memos.c: (get_selected_components_cb),
	(do_for_selected_components), (obtain_list_of_components),
	(table_drag_data_get): Pass list of selected components as data
	for drag and drop instead of focused component from the list.
	* gui/e-tasks.c: (table_drag_data_delete):
	* gui/e-memos.c: (table_drag_data_delete): Obsolete now.
	* gui/tasks-component.c: (selector_tree_drag_data_received):
	* gui/memos-component.c: (selector_tree_drag_data_received):
	Receiving list of components, so made changes here to reflect it.

2007-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #318604

	* Enable source when adding event to disabled source.
	* gui/gnome-cal.h: (gnome_calendar_emit_user_created_signal):
	New helper function which will store used calendar before emitting
	signal "user_created" on the instance to GnomeCalendar for later use
	and unset it right after the emit.
	* gui/gnome-cal.c: (struct _GnomeCalendarPrivate): New member to store
	used ECal before emitting "user_created" signal.
	* gui/gnome-cal.c: (gnome_calendar_emit_user_created_signal),
	(user_created_cb): Implementation of new helper function and enabling
	last used source instead of default one on "user_created" signal.
	* gui/e-day-view.c: (e_day_view_on_editing_stopped):
	* gui/e-week-view.c: (e_week_view_on_editing_stopped):
	* gui/e-calendar-view.c: (object_created_cb): Use our new
	helper function to emit "user_created" signal with proper ECal.
	* gui/e-calendar-table.h: (struct _ECalendarTable):