@@ -1953,6 +1953,20 @@ e_date_edit_time_is_valid	(EDateEdit	*dedit)
 	return TRUE;
 }
 
+/**
+ * e_date_edit_have_time
+ * Check if time is set, i.e. it isn't 'None'/empty. Date can be set in this case.
+ *
+ * @param dedit an EDateEdit widget.
+ * @return TRUE is time is set, FALSE otherwise.
+ **/
+gboolean
+e_date_edit_have_time (EDateEdit *dedit)
+{
+	g_return_val_if_fail (dedit != NULL, FALSE);
+
+	return !dedit->priv->date_set_to_none && !dedit->priv->time_set_to_none;
+}
 
 static gboolean
 e_date_edit_set_date_internal	(EDateEdit	*dedit,
